Trying to get the OutputFile.html to be hosted

--- a/OutputFile.html
+++ b/OutputFile.html
@@ -1,4 +1,10 @@
-using GptFinance.Application.Interfaces;
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Your Website Title</title>
+</head>
+<body>
+    using GptFinance.Application.Interfaces;
 using GptFinance.Application.Models;
 using GptFinance.Domain.Entities;
 using Microsoft.AspNetCore.Mvc;
@@ -1124,3 +1130,5 @@ namespace GptFinance.Infrastructure.Services
 }
 global using System.Globalization;
 
+</body>
+</html>
